<resources>
    <string name="app_name">Flash</string>
    <string name="welcome_to_flash">WELCOME TO \nFLASH</string>

    <string name="name">Your Display Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="account_settings">Account Settings</string>
    <string name="log_out">Log Out</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="create_account">Create Account</string>
    <string name="need_a_new_account">Need a new Account?</string>
    <string name="already_have_an_account">already have an account</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_id">user_id</string>
    <string name="display_name">Display Name</string>
    <string name="flash">Flash</string>
    <string name="save_changes">Save Changes</string>
    <string name="add_your_description_here">Add your Description here…</string>
    <string name="post">Post</string>
    <string name="todo">TODO</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="friends">Friends</string>
    <string name="username">Username</string>
    <string name="post_date">Post Date</string>
    <string name="sample_text">Sample post decription Sample post decription Sample post decription Sample post decription</string>
    <string name="_0_likes">0 Likes</string>
    <string name="edit">Edit</string>
    <string name="write_something_about_yourself">Write something about yourself...</string>
    <string name="search">Search</string>


</resources>
