<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewPostActivity"
    android:background="@android:color/white">

    <include layout="@layout/app_bar_layout"
        android:id="@+id/post_page_bar"/>


    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_below="@+id/post_page_bar"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_page_bar">

        <ImageView
            android:id="@+id/addPostImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/post_page_bar"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/default_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="NotSibling" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/add_post_image_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/addPostImage"
            android:layout_alignEnd="@id/addPostImage"
            android:background="@color/colorPrimary"
            android:clickable="true"
            android:src="@drawable/camera_btn"
            app:borderWidth="2dp"
            app:fabSize="normal"
            android:focusable="true" />

    </RelativeLayout>


    <EditText
        android:id="@+id/postDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="148dp"
        android:gravity="top"
        android:hint="@string/add_your_description_here"
        android:inputType="textMultiLine"
        android:padding="5dp"
        android:textSize="22sp"
        android:maxHeight="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relative_layout"
        app:layout_constraintVertical_bias="0.0"
        android:autofillHints="" tools:targetApi="o"/>


    <Button
        android:id="@+id/uploadPost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="235dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/buttons_layout"
        android:text="@string/post"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postDesc"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>